# AHS-Agent-Hybrid-System

./: .ahsrc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  demo.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
bridge/: __init__.py  dashboard.html  hermes_bridge.py  mcp_http_server.py  mcp_tools.py  mcp_web_search.py  memory_store.py  shared_memory.json
core/: __init__.py  agent_loop.py  orchestrator.py  orchestrator_v2.py
docs/: AHS_GUIDE.md  AHS_GUIDE_EN.md  TRANSLATION_REPORT.txt  __init__.py
skills/: __init__.py  code_assistant.py  extended_skills.py  hybrid_skills.py  synthesizer.py  web_search.py
system/: __init__.py  cache.py  config_manager.py  doctor.py  event_system.py  exporter.py  integration.py  logger.py  monitor.py  multi_agent.py  pipeline.py  plugin_system.py  repl.py  scheduler.py  self_learn.py  skill_manager.py  tool_registry.py  tools.py  utils.py
system_archive/: exporter.py  pipeline.py  repl.py
tests/: __init__.py  test_hermes_bridge.py  test_http_server.py  test_learn_skills.py  test_mcp.py  test_real.py  test_registry.py  test_suite.py  test_unit.py
tests/integration/: test_mcp_server.py
ts-core/: biome.json  package-lock.json  package.json  vitest.config.ts
ts-core/src/: agent-loop.ts  gateway.ts  gateway.ts.bak.backup  hermes-bridge.ts  index.ts  middleware.ts
ts-core/src/bridge/: hermes-bridge.ts
ts-core/tests/: agent-loop.test.ts  bridge.test.ts  gateway.test.ts  llm-classifier.test.ts  middleware.test.ts  orchestrator.test.ts
(+3 files in other folders)
