[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ahs-agent-hybrid-system"
version = "1.0.0"
description = "Agent Hybrid System — OpenClaw (TS) + Hermes (Python) via MCP"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Medzobro", email = "medzobro.projects@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # naming
    "UP",   # pyupgrade
    "S",    # bandit security
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
]
ignore = ["E501"]  # line-length handled separately

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=system --cov=bridge --cov-report=term-missing"
